--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             height: 120px;
             margin: 10px 20px;
             border-radius: 50%;
-            border: 2px solid white;
+           /*  border: 2px solid white; */
             /* Рамка для отображения границ элементов */
         }
 
